# windows_spotlight

./: README.md  pyproject.toml
src/: __init__.py  get_image_size.py  logger_config.py  windows_spotlight.py  winspot.py
