[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows_spotlight"
version = "0.1.0"
description = "Windows Spotlight helper utilities (image metadata without external image bindings)."
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
winspot = "src.get_image_size:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
